apps/homepage/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Cluster dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "homepage.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  tls:
    - hosts:
        - homepage.local
      secretName: homepage-tls
